<resources>
    <string name="app_name">Easy English</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="easy_english">Easy English</string>
    <string name="bionic_university_project">Bionic University Project</string>
    <string name="trainee">Trainee</string>
    <string name="study_new_words">Study New Words</string>
    <string name="add_new_word">Add New Word</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="about_project">This application can help you study new English words and became you more clever. Application made by 2 men: sanqa and alex.
    \n\nTranslation is made by Yandex Translate.</string>
    <string name="our_dictionary">Our Dictionary</string>
    <string name="about_project_label">About project</string>
    <string name="settings_count_words">Count words to learn:</string>
    <string name="your_db">Your DB:</string>
    <string name="dots">...</string>
    <string name="progress_label">Progress</string>
    <string name="title_activity_write_author">WriteAuthorActivity</string>
    <string name="ask_your_problem">Ask your problem at author directly.</string>
    <string name="describe_your_problem">Describe your problem</string>
    <string name="send">Send</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="title_activity_add_new_word">AddNewWord</string>
    <string name="input_new_word">Input new word...</string>
    <string name="translate">Translate</string>
    <string name="add">Add</string>
    <string name="progress_learned_label">Learned : </string>
    <string name="your_level">Your level:</string>
    <string name="learned_per_month">Learned at </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mode1">Word - Translate</string>
    <string name="mode2">Translate - Word</string>
    <string name="mode3">Directly</string>
    <string name="mode4">Letters</string>
    <string name="title_activity_our_dictionary">Easy English</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="mode3_head">Translate the word</string>
    <string name="submit_button">SUBMIT</string>
    <string name="learned_words">Learned words</string>
    <string name="show">Show learned words</string>
    <string name="write_to_author">Write to author</string>
    <string name="trainee_modes">Trainee Modes</string>
    <string name="result">Result!</string>
    <string name="you_have">"You have "</string>
    <string name="correct_answers">" correct answers."</string>
    <string name="change_mode">Change Mode</string>
    <string name="this_mode">This Mode</string>
    <string name="wrong">Wrong</string>
    <string name="next">Next</string>
    <string name="go">GO</string>
    <string name="add_words_from_list">Add words from list</string>
    <string name="get_translation_here">Get translation here...</string>
    <string name="words">Words</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="information">How to use</string>
    <string name="information_first_label">1. How to add new words?</string>
    <string name="information_second_label">2. How to study words?</string>
    <string name="info_third_label">3. Settings.</string>
    <string name="info_context1">You have 2 different opportunities to add new words in your application. First of all you can choose mode (en-ru or ru_en) and type word. After you click button \'Translate\' you will get a translation of this word.</string>
    <string name="info_context2">Also you can change the variant of translation. You should click on your translated word and change it as you want to study.</string>
    <string name="info_context3">When you click button \'Add\' you append your word in application. But if you have already had this word, we don\'t let you add it one more time.</string>
    <string name="info_context4">Second opportunity to add new words - it\'s use some sets of words which used in some specific themes. To do this you should click button which looks like in screen below.</string>
    <string name="info_context5">When you press in this button, you can see and choose every set which you want. Press on the \'check mark\' and all of these word will be append.</string>
    <string name="info_context6">To study your words you can choose one from your trainee words. At that time when you use this application you can use 3 modes. \'Word - Translate\', \'Translate - Word\', \'Input the word directly\'.</string>
    <string name="info_context7">In different modes you have different rules how to study your words. You should click right variant of translation or type all word definitely right. But if you make a wrong answer, app shows you which was the correct answer.</string>
    <string name="info_context8">In this screen you can change count of words which you want to study. Click on spinner and choose it.</string>
    <string name="info_context9">If you have a question or you want to change in this application, you can write an email to developer. To do this, please click on button below.</string>
    <string name="toast_same_word">You already had this word.</string>
    <string name="toast_add_word_number">Add to learn as #</string>
    <string name="bottom_banner">ca-app-pub-1436068137931163/5714806136</string>
    <string name="bottom_banner_short">ca-app-pub-1436068137931163/6838285734</string>
    <string name="add_array">Add</string>
    <string name="array_question">Do you really want to study these words?</string>
    <string name="array_answer_yes">Yes</string>
    <string name="array_answer_no">No</string>
    <string name="array_add">You have added these words.</string>
</resources>