<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_new_word"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/our_background1"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bionic.sasha.betterenglish.AddNewWordActivity"
    tools:showIn="@layout/app_bar_add_new_word">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ProgressBar
            android:id="@+id/new_word_progress"
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/text_new_word"
            android:layout_width="@dimen/new_word_text_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_new_word_margin"
            android:ems="10"
            android:hint="@string/input_new_word"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button_get_translate"
            android:layout_width="@dimen/add_new_word_button_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_new_word_margin"
            android:text="@string/translate" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/add_text_translate"
            android:layout_width="@dimen/new_word_text_width"
            android:layout_height="wrap_content"
            android:hint="@string/get_translation_here"
            android:layout_gravity="center"
            android:layout_margin="@dimen/add_new_word_margin" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="@dimen/add_new_word_button_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_new_word_margin"
            android:enabled="false"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/add_new_word_button_margin"
        android:gravity="center">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="15sp"
            android:text="@string/add_words_from_list"
            android:background="@color/mode1"
            android:onClick="openArrayWords"
            android:textColor="@color/our_background1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>

