<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:background="@color/our_background1"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:context="com.bionic.sasha.betterenglish.ProgressActivity"
    tools:showIn="@layout/app_bar_progress">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/progress_learned_label"
            android:textSize="@dimen/progress_activity_text_size" />

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/progress_margin_visual"
            android:gravity="center"
            android:text="@string/your_level"
            android:textSize="@dimen/progress_activity_text_size" />

        <TextView
            android:id="@+id/progress_text_month"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/progress_margin_visual"
            android:text="@string/learned_per_month"
            android:textSize="@dimen/progress_activity_text_size" />

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/progress_margin_visual"
            android:text="Learned today:"
            android:textSize="@dimen/progress_activity_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/progress_margin_visual"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_all_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/progress_activity_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textSize="@dimen/progress_activity_text_size" />

            <TextView
                android:id="@+id/all_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/progress_activity_text_size" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="@dimen/progress_bar_height"
            android:layout_margin="@dimen/progress_margin_visual" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="0"
            android:textSize="@dimen/progress_activity_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/progress_margin_visual"
            android:text="0"
            android:textSize="@dimen/progress_activity_text_size" />


    </LinearLayout>

</LinearLayout>

